# telegram_bot_expenses

./: .gitignore  Makefile  README.md
bot-service/: .gitignore  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  utils.py
bot-service/app/: database.py  exceptions.py  main.py  models.py  schemas.py
bot-service/tests/: conftest.py
bot-service/tests/app/: test_main.py
connector-service/: README.md  package.json
connector-service/src/: index.js
