[tool.poetry]
name = "bot-service"
version = "0.1.0"
description = ""
authors = ["Mauro Lopez <mauro.javier.lopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.1"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
langchain = "^0.3.8"
sqlalchemy = "^2.0.36"
openai = "^1.55.0"
langchain-openai = "^0.2.9"
ruff = "^0.8.0"
pytest = "^8.3.3"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
